NXT-2471: Introduce SelectionEventBus
... which replaces the SelectionEventSource.
Same purpose - slightly different 'mechanics'.

NXT-2471 (Listen for selection events in embedded port/node views)